RESOLVED FIXED23618
Templated worker tasks should be more error proof to use
https://bugs.webkit.org/show_bug.cgi?id=23618
Summary Templated worker tasks should be more error proof to use
David Levin
Reported 2009-01-29 02:40:18 PST
Right now, there is a fair amount of knowing which parameters need to be copied and doing it by hand but it would be nice if the generic worker tasks just handled this for callers.
Attachments
Part 1: Add useful templates to TypeTraits.h (9.42 KB, patch)
2009-01-29 03:54 PST, David Levin
no flags
Land this which is the R+ review plus a spelling correction (and minor changelog change). (9.40 KB, patch)
2009-01-29 14:33 PST, David Levin
no flags
Part 2: Add the copying mechanisms and extra classes for GenericWorkerTasks. (40.37 KB, patch)
2009-01-29 16:06 PST, David Levin
no flags
Part 2: Add the copying mechanisms and extra classes for GenericWorkerTasks. (40.23 KB, patch)
2009-01-30 02:17 PST, David Levin
ap: review+
Part 1.1: Fix chromium build. (2.89 KB, patch)
2009-01-30 13:41 PST, David Levin
no flags
David Levin
Comment 1 2009-01-29 03:54:48 PST
Created attachment 27144 [details] Part 1: Add useful templates to TypeTraits.h I checked that these compile with vs2005 (and the compile asserts should have caught if they were not functioning).
Alexey Proskuryakov
Comment 2 2009-01-29 06:16:07 PST
Comment on attachment 27144 [details] Part 1: Add useful templates to TypeTraits.h + * wtf/TypeTraits.h: + (WTF::): Mistakes made by prepare-ChangeLog such as this one should be corrected manually. In this case, is is probably best to just remove this line - but generally, we prefer comments to be per-function or at least per-file. + // The following are providing in this file: This doesn't look like correct English grammar to me. + template<typename T> struct IsConvertibleToInteger { + private: + typedef char YesType; If it were a class, you wouldn't need private: at the start. This is good to land as is, maybe with a small correction to grammar. r=me
David Levin
Comment 3 2009-01-29 14:33:27 PST
Created attachment 27162 [details] Land this which is the R+ review plus a spelling correction (and minor changelog change).
David Levin
Comment 4 2009-01-29 16:06:55 PST
Created attachment 27169 [details] Part 2: Add the copying mechanisms and extra classes for GenericWorkerTasks.
Alexey Proskuryakov
Comment 5 2009-01-30 00:38:47 PST
Comment on attachment 27144 [details] Part 1: Add useful templates to TypeTraits.h Committed revision 40400.
David Levin
Comment 6 2009-01-30 02:17:07 PST
Created attachment 27176 [details] Part 2: Add the copying mechanisms and extra classes for GenericWorkerTasks. Removed the RemoveConstVolatile usage for now.
Alexey Proskuryakov
Comment 7 2009-01-30 02:23:46 PST
Comment on attachment 27176 [details] Part 2: Add the copying mechanisms and extra classes for GenericWorkerTasks. r=me
David Levin
Comment 8 2009-01-30 13:41:14 PST
Created attachment 27192 [details] Part 1.1: Fix chromium build. Part 1 has been checked in and now breaks the chromium build (due to it having an additional warning turned on). This patch fixes the chromium build.
Dimitri Glazkov (Google)
Comment 9 2009-01-30 14:02:39 PST
David Levin
Comment 10 2009-01-30 14:11:21 PST
Comment on attachment 27192 [details] Part 1.1: Fix chromium build. committed in http://trac.webkit.org/changeset/40418
Alexey Proskuryakov
Comment 11 2009-02-02 23:37:15 PST
Part 2 committed revision 40525.
Note You need to log in before you can comment on or make changes to this bug.