2009-01-30  David Levin  <levin@chromium.org>

Reviewed by Alexey Proskuryakov.

        Bug 23618: Templated worker tasks should be more error proof to use
        <https://bugs.webkit.org/show_bug.cgi?id=23618>

        Add the type traits needed for the generic worker tasks
        and compile asserts for them.

        Add a summary header to the TypeTraits.h file to explain what is in there.

        Add a note to explain IsPod's deficiencies.

        * wtf/TypeTraits.h:




Canonical link: https://commits.webkit.org/32583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40400 268f45cc-cd09-0410-ab3c-d52691b4dbfc